--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
+    "live-server": "^1.2.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "yarn": "^0.20.3"
