--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "firebase": "^3.7.0",
+    "material-ui": "^0.17.0",
     "query-string": "^4.3.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
