--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.27.3",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "live-server": "^1.2.0",
+    "style-loader": "^0.14.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "yarn": "^0.20.3"
