--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - travis_retry npm install
   - travis_retry gem install s3_website -v 2.12.3
 before_script: webpack
-script: deploy/s3_deploy.sh
+script: npm test && deploy/s3_deploy.sh
 cache:
   directories:
     - node_modules
