--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "csv-parse": "^1.2.0",
+    "dateformat": "^2.0.0",
     "firebase": "^3.7.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
