--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "npaessel@concord.org",
   "license": "MIT",
   "dependencies": {
+    "@types/query-string": "^4.3.0",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "copy-webpack-plugin": "^4.0.1",
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
     "firebase": "^3.7.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
+    "mobx": "^3.1.7",
+    "mobx-react": "^4.1.3",
     "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -26,6 +30,13 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.59",
+    "@types/material-ui": "^0.16.59",
+    "@types/react": "^15.0.20",
+    "@types/react-dom": "^0.14.23",
+    "@types/semver": "^5.3.31",
+    "@types/uuid": "^2.0.29",
+    "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
@@ -42,6 +53,7 @@
     "jest": "^19.0.2",
     "live-server": "^1.2.0",
     "style-loader": "^0.14.1",
+    "typescript": "^2.2.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "yarn": "^0.20.3"
