--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "npaessel@concord.org",
   "license": "MIT",
   "dependencies": {
-    "@types/query-string": "^4.3.0",
-    "@types/react-tap-event-plugin": "^0.0.30",
     "copy-webpack-plugin": "^4.0.1",
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
@@ -30,6 +28,8 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "@types/query-string": "^4.3.0",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "@types/material-ui": "^0.16.59",
     "@types/react": "^15.0.20",
     "@types/react-dom": "^0.14.23",
@@ -55,7 +55,8 @@
     "typescript": "^2.2.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "yarn": "^0.20.3"
+    "yarn": "^0.20.3",
+    "mobx-react-devtools": "^4.2.11"
   },
   "repository": {
     "type": "git",
