--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: node_js
 node_js:
   - 6
 install:
-  - travis_retry npm install
+  - travis_retry yarn
   - travis_retry gem install s3_website -v 2.12.3
 before_script: webpack
 script: npm test && deploy/s3_deploy.sh
 cache:
+  yarn: true
   directories:
     - node_modules
