--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/react-dropzone": "^0.0.32",
     "@types/react-leaflet": "^1.0.6",
+    "@types/react-router": "3.0.5",
     "copy-webpack-plugin": "^4.0.1",
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
@@ -28,6 +29,7 @@
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.4",
     "react-leaflet": "^1.1.6",
+    "react-router": "3.0.5",
     "react-tap-event-plugin": "^2.0.1",
     "semver": "^5.3.0",
     "uuid": "^3.0.1"
