--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Demo app (one to throw away) for simulating weather in a classroom",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src",
+    "lint": "tslint --project . && eslint src",
     "start": "live-server .",
     "test": "jest",
     "watch": "webpack --watch"
@@ -12,10 +12,6 @@
   "author": "npaessel@concord.org",
   "license": "MIT",
   "dependencies": {
-    "@types/react-dropzone": "^0.0.32",
-    "@types/react-leaflet": "^1.0.6",
-    "@types/react-router": "3.0.5",
-    "copy-webpack-plugin": "^4.0.1",
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
     "firebase": "^3.7.0",
@@ -39,6 +35,9 @@
     "@types/query-string": "^4.3.0",
     "@types/react": "^15.0.20",
     "@types/react-dom": "^0.14.23",
+    "@types/react-dropzone": "^0.0.32",
+    "@types/react-leaflet": "^1.0.6",
+    "@types/react-router": "3.0.5",
     "@types/react-tap-event-plugin": "^0.0.30",
     "@types/semver": "^5.3.31",
     "@types/uuid": "^2.0.29",
@@ -49,6 +48,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.22.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
@@ -60,6 +60,7 @@
     "live-server": "^1.2.0",
     "mobx-react-devtools": "^4.2.11",
     "style-loader": "^0.14.1",
+    "tslint": "^5.5.0",
     "typescript": "^2.2.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
