--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "tslint --project . && eslint src",
-    "start": "live-server .",
+    "start": "webpack-dev-server",
     "test": "jest",
     "watch": "webpack --watch"
   },
