Add lint:fix script; enable TSLint rules; fix resulting TSLint errors - rules enabled: `array-type`, `eofline`, `no-var-keyword`, `radix`, `semicolon`, `triple-equals`

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "tslint --project . && eslint src",
+    "lint:fix": "tslint --project . --fix && eslint --fix src",
     "start": "webpack-dev-server",
     "test": "jest",
     "watch": "webpack --watch"
