--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "tslint --project . && eslint src",
     "lint:fix": "tslint --project . --fix && eslint --fix src",
+    "pretest": "npm run lint",
     "start": "webpack-dev-server",
     "test": "jest",
     "watch": "webpack --watch"
