--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
+    "datejs": "^1.0.0-rc3",
     "firebase": "^3.7.0",
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
