--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "csv-parse": "^1.2.0",
     "dateformat": "^2.0.0",
-    "datejs": "^1.0.0-rc3",
     "firebase": "^3.7.0",
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
     "mobx": "^3.1.7",
     "mobx-react": "^4.1.3",
+    "momentjs": "^2.0.0",
     "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
