--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
-    "mobx": "^3.1.7",
+    "mobx": "^3.1.15",
     "mobx-react": "^4.1.3",
+    "mobx-state-tree": "^0.9.4",
     "momentjs": "^2.0.0",
     "query-string": "^4.3.2",
     "react": "^15.4.2",
