--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
-    "mobx": "^3.1.15",
-    "mobx-react": "^4.1.3",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "mobx-state-tree": "^0.9.4",
-    "momentjs": "^2.0.0",
+    "moment": "^2.18.1",
     "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -62,7 +62,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "jest": "^19.0.2",
     "live-server": "^1.2.0",
-    "mobx-react-devtools": "^4.2.11",
+    "mobx-react-devtools": "^4.2.15",
     "style-loader": "^0.14.1",
     "tslint": "^5.5.0",
     "typescript": "^2.2.2",
