--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "mobx-react-devtools": "^4.2.15",
     "style-loader": "^0.14.1",
     "tslint": "^5.5.0",
-    "typescript": "^2.2.2",
+    "typescript": "2.3.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "yarn": "^0.20.3"
