Prepare for unused variable detection - add `"noUnusedLocals": false` to `tsconfig.json` -- set to true to find unused variables at compile time - add `"no-unused-variable": false` to `tslint.json` -- set to true to find unused variables at lint time - both options are disabled by default, at least until the number of warnings/errors are reduced

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     // TODO:  Change this when things start to compile
     "noImplicitAny": true,
+    "noUnusedLocals": false,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
