Project Cleanup - `package.json`: `jest` only runs tests in `tests` folder - delete unused files (sessions.json) - `tsconfig.json`: exclude files in new `zzz_legacy` folder - rename `src/js` => `src/code` - rename `components` => `views` - add `utilities` folder (component-style-map.ts) - move unused files to new `zzz_legacy` folder for archiving   - application-store.ts, frame-helper.js, kriging.js, kriging.test.js, map-view.tsx, normalize.ts, setup-map-view.tsx, setup-stations-view.tsx, setup-view.tsx, sim-prefs.ts, teacher-setup-view.tsx

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "tslint --project . --fix && eslint --fix src",
     "pretest": "npm run lint",
     "start": "webpack-dev-server",
-    "test": "jest",
+    "test": "jest tests",
     "watch": "webpack --watch"
   },
   "author": "npaessel@concord.org",
