`TeacherView` shows predictions nested in a tree view Rename `PredictionView` to `PredictionFormView`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "allowJs": true
   },
   "include": [
-    "./src/code/main.tsx"
+    "./src/code/main.tsx",
+    "./src/code/typings.d.ts"
   ],
   "exclude": [
     "./src/code/zzz_legacy/*"
