--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^1.1.6",
     "react-router": "3.0.5",
     "react-tap-event-plugin": "^2.0.1",
+    "react-treeview": "^0.4.7",
     "semver": "^5.3.0",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.3"
