--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pretest": "npm run lint",
     "start": "webpack-dev-server",
     "test": "jest tests",
+    "ci": "jest tests --watch",
     "watch": "webpack --watch"
   },
   "jest": {
