--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "mobx-state-tree": "^0.9.4",
-    "moment": "^2.18.1",
+    "moment": "^2.20.1",
     "query-string": "^4.3.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -50,6 +50,7 @@
     "@types/jest": "^21.1.5",
     "@types/lodash": "^4.14.72",
     "@types/material-ui": "^0.17.19",
+    "@types/moment": "^2.13.0",
     "@types/query-string": "^4.3.0",
     "@types/react": "^15.6.0",
     "@types/react-dom": "^15.5.1",
