--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
@@ -13,10 +14,9 @@
     "allowJs": true
   },
   "include": [
-    "./src/code/main.tsx",
-    "./src/code/typings.d.ts"
+    "src/code/**/*"
   ],
   "exclude": [
-    "./src/code/zzz_legacy/*"
+    "src/code/zzz_legacy/**/*"
   ]
 }
