--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
+    "material-ui-next": "npm:material-ui@next",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-state-tree": "^1.3.1",
