--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "clipboard": "^1.7.1",
     "firebase": "^4.9.0",
+    "jsonwebtoken": "^8.1.1",
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/clipboard": "^1.5.36",
     "@types/jest": "^21.1.5",
+    "@types/jsonwebtoken": "^7.2.5",
     "@types/lodash": "^4.14.72",
     "@types/material-ui": "^0.20.5",
     "@types/query-string": "^5.0.1",
