--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Demo app (one to throw away) for simulating weather in a classroom",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production --devtool false",
+    "build:dev": "webpack",
     "lint": "tslint --project . && eslint src",
     "lint:fix": "tslint --project . --fix && eslint --fix src",
     "pretest": "npm run lint",
@@ -70,7 +72,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.22.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.27.3",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^6.2.1",
@@ -78,16 +80,20 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.5.0",
     "jest": "^22.1.4",
     "live-server": "^1.2.0",
     "mobx-react-devtools": "^4.2.15",
     "style-loader": "^0.14.1",
     "ts-jest": "^22.0.1",
+    "ts-loader": "^5.3.1",
     "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.4",
     "typescript": "^2.6.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "^4.27.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "repository": {
     "type": "git",
