--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "clipboard": "^1.7.1",
     "firebase": "^4.9.0",
+    "iframe-phone": "^1.2.0",
     "jsonwebtoken": "^8.1.1",
     "leaflet": "^1.0.3",
     "lodash": "^4.17.4",
